--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>job-tracker</title>
+    <title>Lamaraja</title>
   </head>
   <body>
     <div id="root"></div>
